아이템수정

--- a/views/items.ejs
+++ b/views/items.ejs
@@ -70,6 +70,19 @@
       }
       
     }
+
+    body {
+          background-color: rgb(238, 238, 238);
+    }
+
+        main {
+          background-color: white;
+    }
+
+    
+
+
+
     </style>
     <!-- <script src="../public/"></script> -->
 </head>
@@ -113,16 +126,103 @@
       </div>
     </div>
 </header>
+<img src="img/상품배경.jpg" alt="너굴맨" class="col-12">
 
-<main class="container">
-  <img src="../public/img/상품배경.jpg" alt="너굴맨" class="col-12">
+<main class="container mb-5">
+  <br>
+  <div class="container row justify-content-center my-3" style="margin: 0 auto;">
+    <div class="col my-3">
+      <a href="#"><button class="btn btn-dark col-12">All</button></a>
+    </div>
+    <div class="dropdown col my-3">
+      <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+      <a class="i_btn_2" href="#"><span>SKINCARE</span></a>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/skin_item"><strong>SKINCARE</strong></a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/skin_item_LIPCARE">LIPCARE</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/skin_item_AMPOULE_SERUM">AMPOULE/SERUM</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/skin_item_TONER">TONER</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/skin_item_CREAM">CREAM</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/skin_item_FACE">FACE</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/skin_item_LOTION">LOTION</a></li>
+      </ul>
+    </div>
+    <div class="dropdown col my-3">
+      <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="i_btn_2" href="#">MAKEUP</a>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item"><strong>MAKEUP</strong> </a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item_BLUSH">BLUSH</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item_EYE">EYE</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item_BASE">BASE</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item_LIPS">LIPS</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/makeup_item_LIPCARE">LIPCARE</a></li>
+      </ul>
+    </div>
+    <div class="dropdown col my-3">
+      <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="i_btn_2" href="#">CLEANSING</a>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/cleansing_item"><strong>CLEANSING</strong> </a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/cleansing_item_FACE">FACE</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/cleansing_item_HAIR">HAIR</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/cleansing_item_BODY">BODY</a></li>
+      </ul>
+    </div>
+    <div class="dropdown col my-3">
+      <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="i_btn_2" href="#">SUN</a>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/sun_item"><strong>SUN</strong></a></li>
+      </ul>
+    </div> 
+    <div class="dropdown col my-3">
+      <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="i_btn_2" href="#">BODY</a>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item"><strong>BODY</strong> </a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item_LOTION">LOTION</a></li>
+        <!-- <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item_FACE">FACE</a></li> -->
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item_PERFUME">PERFUME</a></li>
+      </ul>
+    </div>
+    <div class="dropdown col my-3">
+      <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="i_btn_2" href="#">OTHER</a>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/other_item"><strong>OTHER</strong></a></li>
+      </ul>
+    </div> 
+    <div class="dropdown col my-3">
+      <button class="btn btn-outline-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="i_btn_2" href="#">BRAND</a>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/athe">athe</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/melixir">melixir</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/LUSH">LUSH</a></li>
+        <li><a class="dropdown-item" href="http://127.0.0.1:3000/DearDahlia">DearDahlia</a></li>
+      </ul>
+    </div>
+  </div>
+
+
+<!-- 
+
+
     <div class="logo-bar con">
         <div class="menu-bar">
             <div class="menu-box">
                 <ul class="row">
                     <li class="menu">
-                        <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                      <div class="dropdown">
+                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                         <a class="i_btn_2" href="#"><span>SKINCARE</span></a>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -139,7 +239,7 @@
 
                     <li class="menu">
                         <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             <a class="i_btn_2" href="#">MAKEUP</a>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -155,7 +255,7 @@
 
                     <li class="menu">
                         <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             <a class="i_btn_2" href="#">CLEANSING</a>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -168,7 +268,7 @@
                     </li>
                     <li class="menu">
                         <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             <a class="i_btn_2" href="#">SUN</a>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -179,20 +279,20 @@
 
                     <li class="menu">
                         <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             <a class="i_btn_2" href="#">BODY</a>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                           <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item"><strong>BODY</strong> </a></li>
                           <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item_LOTION">LOTION</a></li>
-                          <!-- <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item_FACE">FACE</a></li> -->
+                          <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item_FACE">FACE</a></li>
                           <li><a class="dropdown-item" href="http://127.0.0.1:3000/body_item_PERFUME">PERFUME</a></li>
                         </ul>
                       </div>
                     </li>
                     <li class="menu">
                         <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             <a class="i_btn_2" href="#">OTHER</a>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -201,7 +301,7 @@
                       </div> 
                     </li>
                     <li class="menu"><div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             <a class="i_btn_2" href="#">BRAND</a>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -216,17 +316,17 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- <div class="bn-box con">
         <div class="img-box">
             <img src="../img/pexels-karolina-grabowska-4465124.jpg" alt="너굴맨" height="460px" width="978px">
         </div>
     </div> -->
 
-    <div class="list con">
+    <!-- <div class="container col-lg-10 col-md-12 align-items-center">
         <div>
           
-          <ul class="row">
+          <ul class="row align-items-center">
             <% for(let i=0 ; i<rows.length ; i++){%>
               
                 <li class="cell">
@@ -234,15 +334,47 @@
                    <a href="<%=rows[i].purchase_link%>"><div class="img-box"><img src="<%=rows[i].img_link%>" alt="" class="img-thumbnail"></div></a> 
                    <a href="<%=rows[i].purchase_link%>"><div class="product-name"><%=rows[i].item_name%></div></a>
                     <div class="product-price"><%=rows[i].strike_price%>원</div>
-                    <!-- <span><button type="button" class="btn btn-success" id="like<%=i%>" onclick="like(<%=i%>)">하트</button></span> -->
-                    <button value="😍위시리스트" class="btn btn-danger" onclick="InsertData('+<%=rows[i].item_index%>+'+'+<%=rows[i].strike_price%>+')">
+                    <button class="btn btn-outline-danger">😍 위시리스트</button>
                 </li>
               
           <% } %> 
         </ul>
-      
-    </div>
+    </div> -->
 
+
+    <div class="container col-lg-10 col-md-12 pb-5" style="margin: 0 auto;">
+
+        <% for(let i=0 ; i<rows.length/4 ; i++){%>
+          <div class="row" style="text-align: center;">
+            <div class="col-xl-3 col-lg-6 col-sm-12">
+             <a href="<%=rows[4*i].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
+             <a href="<%=rows[4*i].purchase_link%>"><div class="product-name my-2"><%=rows[4*i].item_name%></div></a>
+              <div class="product-price mb-2" style="margin: 0 auto;"><%=rows[4*i].strike_price%>원</div>
+              <button class="btn btn-outline-danger">😍 위시리스트</button>
+            </div>
+            <div class="col-xl-3 col-lg-6 col-sm-12">
+              <a href="<%=rows[4*i+1].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+1].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
+              <a href="<%=rows[4*i+1].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+1].item_name%></div></a>
+               <div class="product-price mb-2"><%=rows[4*i+1].strike_price%>원</div>
+               <button class="btn btn-outline-danger">😍 위시리스트</button>
+             </div>
+             <div class="col-xl-3 col-lg-6 col-sm-12">
+              <a href="<%=rows[4*i+2].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+2].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
+              <a href="<%=rows[4*i+2].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+2].item_name%></div></a>
+               <div class="product-price mb-2"><%=rows[4*i+2].strike_price%>원</div>
+               <button class="btn btn-outline-danger">😍 위시리스트</button>
+             </div>
+             <div class="col-xl-3 col-lg-6 col-sm-12">
+              <a href="<%=rows[4*i+3].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+3].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
+              <a href="<%=rows[4*i+3].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+3].item_name%></div></a>
+               <div class="product-price mb-2"><%=rows[4*i+3].strike_price%>원</div>
+               <button class="btn btn-outline-danger">😍 위시리스트</button>
+             </div>
+          </div>
+          <br>
+            
+        <% } %> 
+    </div>
 </main>
 
 
