--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,12 +54,12 @@
     }
     /* div.col-md-3.text-end{
       display: none;
-    } */
-
+      } */
+    
     .dropdown-item:active {
       background-color: #0e3023af;
       }
-    @media (max-width: 890px) {
+    @media (max-width: 921px) {
       ul.nav.col-12 {
         display: none;
       }
@@ -81,7 +81,7 @@
       }
       
     }
-
+    
 
 /* (포스트,뉴스,설명)호버 시작 */
 .box1 img,.box1:after,.box1:before{width:100%;transition:all .3s ease 0s}
@@ -146,18 +146,13 @@ body{background-color:#f1f1f2}
     <div class="col-md-3 text-end">
       <div class="dropdown">
 <!-- 햄버거 메뉴 -->
-<button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  <!-- <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-    <path fill-rule="evenodd"
-      d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-  </svg> -->
-  <svg viewBox="0 0 100 80" width="30" height="30">
-    <rect width="100" height="20" rx="8"></rect>
-    <rect y="30" width="100" height="20" rx="8"></rect>
-    <rect y="60" width="100" height="20" rx="8"></rect>
-  </svg>
-</button>
+        <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <svg viewBox="0 0 100 80" width="30" height="30" fill="white">
+            <rect width="100" height="20" rx="8"></rect>
+            <rect y="30" width="100" height="20" rx="8"></rect>
+            <rect y="60" width="100" height="20" rx="8"></rect>
+          </svg>
+        </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
           <li><a class="dropdown-item" href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light">Home</a></li>
           <li><a class="dropdown-item" href="http://127.0.0.1:3000/information_vegan.html" class="nav-link px-2 link-light">About</a></li>
