--- a/views/random_result.ejs
+++ b/views/random_result.ejs
@@ -90,7 +90,7 @@ body{
           width:250px;
           height: 250px;
           border: none;
-          border-bottom: thick double #32a1ce;
+          /* border-bottom: thick double #32a1ce; */
           box-sizing: border-box;
       }
 
@@ -169,7 +169,7 @@ body{
         </div>
         <div class="row">
           <div class="col">
-            <img src="" alt="" class="mx-2 my-5">
+            <a href="hhttp://127.0.0.1:3000/recommend_start.html"><img src="../img/다시하기버튼.jpg" alt="" class="mx-2 my-5"></a>
           </div>
         </div>
     </div>
