--- a/views/items.ejs
+++ b/views/items.ejs
@@ -350,36 +350,80 @@
            <a href="<%=rows[4*i].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
            <a href="<%=rows[4*i].purchase_link%>"><div class="product-name my-2"><%=rows[4*i].item_name%></div></a>
             <div class="product-price mb-2" style="margin: 0 auto;"><%=rows[4*i].strike_price%>원</div>
-            <button class="btn btn-outline-danger">😍 위시리스트</button>
+            <% if(user!=null){%>
+              <form action="http://127.0.0.1:3000/wish">
+                <input type="hidden" name="img_link" value="<%=rows[4*i].img_link%>">
+                <input type="hidden" name="purchase_link" value="<%=rows[4*i].purchase_link%>">
+                <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
+                <input type="hidden" name="strike_price" value="<%=rows[4*i].strike_price%>">
+                <input type="hidden" name="user_id" value="<%=user.id%>">
+                <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
+              </form>
+             <% }%>
           </div>
           <%}%>
+
           <% if(rows[4*i+1] != null) {%>
             <div class="col-xl-3 col-lg-6 col-sm-12">
             <a href="<%=rows[4*i+1].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+1].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
             <a href="<%=rows[4*i+1].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+1].item_name%></div></a>
              <div class="product-price mb-2"><%=rows[4*i+1].strike_price%>원</div>
-             <button class="btn btn-outline-danger">😍 위시리스트</button>
+             <% if(user!=null){%>
+              <form action="http://127.0.0.1:3000/wish">
+                <input type="hidden" name="img_link" value="<%=rows[4*i+1].img_link%>">
+                <input type="hidden" name="purchase_link" value="<%=rows[4*i+1].purchase_link%>">
+                <input type="hidden" name="item_name" value="<%=rows[4*i+1].item_name%>">
+                <input type="hidden" name="strike_price" value="<%=rows[4*i+1].strike_price%>">
+                <input type="hidden" name="user_id" value="<%=user.id%>">
+                <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
+              </form>
+             <% }%>
+             <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
            </div>
           <%}%>
+
           <% if(rows[4*i+2] != null) {%>
             <div class="col-xl-3 col-lg-6 col-sm-12">
               <a href="<%=rows[4*i+2].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+2].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
               <a href="<%=rows[4*i+2].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+2].item_name%></div></a>
               <div class="product-price mb-2"><%=rows[4*i+2].strike_price%>원</div>
-              <button class="btn btn-outline-danger">😍 위시리스트</button>
+              <% if(user!=null){%>
+                <form action="http://127.0.0.1:3000/wish">
+                  <input type="hidden" name="img_link" value="<%=rows[4*i+2].img_link%>">
+                  <input type="hidden" name="purchase_link" value="<%=rows[4*i+2].purchase_link%>">
+                  <input type="hidden" name="item_name" value="<%=rows[4*i+2].item_name%>">
+                  <input type="hidden" name="strike_price" value="<%=rows[4*i+2].strike_price%>">
+                  <input type="hidden" name="user_id" value="<%=user.id%>">
+                  <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
+                </form>
+               <% }%>
+              <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
             </div>
           <%}%>
+
           <% if(rows[4*i+3] != null) {%>
             <div class="col-xl-3 col-lg-6 col-sm-12">
               <a href="<%=rows[4*i+3].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+3].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
               <a href="<%=rows[4*i+3].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+3].item_name%></div></a>
               <div class="product-price mb-2"><%=rows[4*i+3].strike_price%>원</div>
-              <button class="btn btn-outline-danger">😍 위시리스트</button>
+              <% if(user!=null){%>
+                <form action="http://127.0.0.1:3000/wish">
+                  <input type="hidden" name="img_link" value="<%=rows[4*i+3].img_link%>">
+                  <input type="hidden" name="purchase_link" value="<%=rows[4*i+3].purchase_link%>">
+                  <input type="hidden" name="item_name" value="<%=rows[4*i+3].item_name%>">
+                  <input type="hidden" name="strike_price" value="<%=rows[4*i+3].strike_price%>">
+                  <input type="hidden" name="user_id" value="<%=user.id%>">
+                  <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
+                </form>
+               <% }%>
+              <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
             </div>
           <%}%>
+
         </div>
         <br>
       <% } %> 
+
   </div>
 </main>
 
