--- a/views/mypage_main.ejs
+++ b/views/mypage_main.ejs
@@ -96,7 +96,7 @@
             <div><h1>안녕하세요, <%=user.nick%> 님</h1></div>
             <hr>
             <div class="row my-3">
-              <div class="col"><a href=""><img src="./img/mp111.png" alt="" class="img-fluid"></a></div>
+              <div class="col"><a href="http://127.0.0.1:3000/mypage_wishList"><img src="./img/mp111.png" alt="" class="img-fluid"></a></div>
             </div>
             <div class="row my-3">
               <div class="col"><a href="http://127.0.0.1:3000/mypage_modify"><img src="./img/mp222.png" alt="" class="img-fluid"></a></div>
