--- a/views/mypage_wishList.ejs
+++ b/views/mypage_wishList.ejs
@@ -50,11 +50,14 @@
             </svg>
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="#">로그인</a></li>
-          <li><a class="dropdown-item" href="#">회원가입</a></li>
-          <li><a class="dropdown-item" href="#">마이페이지</a></li>
-          <li><a class="dropdown-item" href="#">로그아웃</a></li>
-
+          <%if(user==null){%>
+            <li><a class="dropdown-item" href="./login.html">로그인</a></li>
+            <li><a class="dropdown-item" href="./Join.html"> 회원가입</a></li>
+          
+          <%}else{%>
+            <li><a class="dropdown-item" href="http://127.0.0.1:3000/mypage_main">마이페이지</a></li>
+            <li><a class="dropdown-item" href="http://127.0.0.1:3000/logout">로그아웃</a></li>
+          <%}%>
         </ul>
         &nbsp;&nbsp;&nbsp;&nbsp;
       </div>
@@ -77,16 +80,11 @@
            <a href="<%=rows[4*i].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
            <a href="<%=rows[4*i].purchase_link%>"><div class="product-name my-2"><%=rows[4*i].item_name%></div></a>
             <div class="product-price mb-2" style="margin: 0 auto;"><%=rows[4*i].strike_price%>원</div>
-            <% if(user!=null){%>
-              <form action="http://127.0.0.1:3000/wish">
-                <input type="hidden" name="img_link" value="<%=rows[4*i].img_link%>">
-                <input type="hidden" name="purchase_link" value="<%=rows[4*i].purchase_link%>">
-                <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
-                <input type="hidden" name="strike_price" value="<%=rows[4*i].strike_price%>">
-                <input type="hidden" name="user_id" value="<%=user.id%>">
-                <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
-              </form>
-             <% }%>
+            <form action="http://127.0.0.1:3000/wish_delete" method="post">
+              <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
+              <input type="hidden" name="user_id" value="<%=user.id%>">
+              <input type="submit" value="선택취소" class="btn btn-outline-danger">
+            </form>
           </div>
           <%}%>
 
@@ -95,18 +93,12 @@
             <a href="<%=rows[4*i+1].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+1].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
             <a href="<%=rows[4*i+1].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+1].item_name%></div></a>
              <div class="product-price mb-2"><%=rows[4*i+1].strike_price%>원</div>
-             <% if(user!=null){%>
-              <form action="http://127.0.0.1:3000/wish">
-                <input type="hidden" name="img_link" value="<%=rows[4*i+1].img_link%>">
-                <input type="hidden" name="purchase_link" value="<%=rows[4*i+1].purchase_link%>">
-                <input type="hidden" name="item_name" value="<%=rows[4*i+1].item_name%>">
-                <input type="hidden" name="strike_price" value="<%=rows[4*i+1].strike_price%>">
-                <input type="hidden" name="user_id" value="<%=user.id%>">
-                <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
-              </form>
-             <% }%>
-             <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
-           </div>
+             <form action="http://127.0.0.1:3000/wish_delete" method="post">
+              <input type="hidden" name="item_name" value="<%=rows[4*i+1].item_name%>">
+              <input type="hidden" name="user_id" value="<%=user.id%>">
+              <input type="submit" value="선택취소" class="btn btn-outline-danger">
+            </form>
+          </div>
           <%}%>
 
           <% if(rows[4*i+2] != null) {%>
@@ -114,17 +106,11 @@
               <a href="<%=rows[4*i+2].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+2].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
               <a href="<%=rows[4*i+2].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+2].item_name%></div></a>
               <div class="product-price mb-2"><%=rows[4*i+2].strike_price%>원</div>
-              <% if(user!=null){%>
-                <form action="http://127.0.0.1:3000/wish">
-                  <input type="hidden" name="img_link" value="<%=rows[4*i+2].img_link%>">
-                  <input type="hidden" name="purchase_link" value="<%=rows[4*i+2].purchase_link%>">
-                  <input type="hidden" name="item_name" value="<%=rows[4*i+2].item_name%>">
-                  <input type="hidden" name="strike_price" value="<%=rows[4*i+2].strike_price%>">
-                  <input type="hidden" name="user_id" value="<%=user.id%>">
-                  <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
-                </form>
-               <% }%>
-              <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
+              <form action="http://127.0.0.1:3000/wish_delete" method="post">
+                <input type="hidden" name="item_name" value="<%=rows[4*i+2].item_name%>">
+                <input type="hidden" name="user_id" value="<%=user.id%>">
+                <input type="submit" value="선택취소" class="btn btn-outline-danger">
+              </form>
             </div>
           <%}%>
 
@@ -133,17 +119,11 @@
               <a href="<%=rows[4*i+3].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+3].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
               <a href="<%=rows[4*i+3].purchase_link%>"><div class="product-name my-2"><%=rows[4*i+3].item_name%></div></a>
               <div class="product-price mb-2"><%=rows[4*i+3].strike_price%>원</div>
-              <% if(user!=null){%>
-                <form action="http://127.0.0.1:3000/wish">
-                  <input type="hidden" name="img_link" value="<%=rows[4*i+3].img_link%>">
-                  <input type="hidden" name="purchase_link" value="<%=rows[4*i+3].purchase_link%>">
-                  <input type="hidden" name="item_name" value="<%=rows[4*i+3].item_name%>">
-                  <input type="hidden" name="strike_price" value="<%=rows[4*i+3].strike_price%>">
-                  <input type="hidden" name="user_id" value="<%=user.id%>">
-                  <input type="submit" value="😍위시리스트" class="btn btn-danger" onclick="InsertData()">
-                </form>
-               <% }%>
-              <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
+              <form action="http://127.0.0.1:3000/wish_delete" method="post">
+                <input type="hidden" name="item_name" value="<%=rows[4*i+3].item_name%>">
+                <input type="hidden" name="user_id" value="<%=user.id%>">
+                <input type="submit" value="선택취소" class="btn btn-outline-danger">
+              </form>
             </div>
           <%}%>
 
