--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,6 +99,8 @@
       display: none;
     }
 
+    
+
 /* (포스트,뉴스,설명)호버 시작 */
 .box1 img,.box1:after,.box1:before{width:100%;transition:all .3s ease 0s}
 .box1 .icon,.box2,.box3,.box4,.box5 .icon li a{text-align:center}
@@ -192,7 +194,7 @@ body{background-color:#f1f1f2}
 
           <%if(user==null){%>
             <li><a class="dropdown-item" href="./login.html">로그인</a></li>
-            <li><a class="dropdown-item" href="./Join.html"> 회원가입</a></li>
+            <li><a class="dropdown-item" href="./Join2.html"> 회원가입</a></li>
           
           <%}else{%>
             <li><a class="dropdown-item" href="http://127.0.0.1:3000/mypage_main">마이페이지</a></li>
