--- a/views/items.ejs
+++ b/views/items.ejs
@@ -24,19 +24,14 @@
           z-index: 0;
         }
         .i_btn_2{
-          width: 135px;
-          
+          width: 135px;     
           /* text-decoration:none; */
-         
-      
-
           /* font-weight: bold; */
         }
         .i_btn_2:hover{
           width: 135px;
-          color: green;
+          color: white;
           text-decoration:none;
-          background-color: white;
           z-index: 1;
 
           /* font-weight: bold; */
@@ -45,39 +40,41 @@
           width: 135px;
           /* background-color: rgba(255, 255, 255, 0.163); */
         }
+        .dropdown-item:active {
+          background-color: grey;
+        }
         
-     
 
         @media (max-width: 890px) {
-      ul.nav.col-12 {
-        display: none;
-      }
+          ul.nav.col-12 {
+          display: none;
+          }
 
-      div.col-md-3.text-end {
-        flex-grow: 1;
-      }
-    }
+          div.col-md-3.text-end {
+            flex-grow: 1;
+          }
+        }
 
-    @media (max-width: 768px) {
-      ul.nav.col-12 {
-        display: none;
-      }
-      div.col-md-3.text-end {
-        flex-grow: 1;
-      }
-      button#dropdownMenuButton1.dropdown-toggle::after{
-        display: none;
-      }
-      
-    }
+        @media (max-width: 768px) {
+          ul.nav.col-12 {
+            display: none;
+          }
+          div.col-md-3.text-end {
+            flex-grow: 1;
+          }
+          button#dropdownMenuButton1.dropdown-toggle::after{
+            display: none;
+          }
+          
+        }
 
-    body {
+        body {
           background-color: rgb(238, 238, 238);
-    }
+        }
 
         main {
-          background-color: white;
-    }
+            background-color: white;
+        }
 
     
 
