--- a/views/items.ejs
+++ b/views/items.ejs
@@ -111,7 +111,7 @@
         
             <%if(user==null){%>	
                 <li><a class="dropdown-item" href="./login.html">로그인</a></li>
-                <li><a class="dropdown-item" href="./Join.html"> 회원가입</a></li> 
+                <li><a class="dropdown-item" href="./Join2.html">회원가입</a></li> 
             
             <%}else{%>
                 <li><a class="dropdown-item" href="http://127.0.0.1:3000/mypage_main">마이페이지</a></li>
